--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background-color: #0e1010 ;
-  max-width: 1280px;
+  /*max-width: 1280px;*/
   margin: auto;
   padding: 0;
 
